--- a/Dockerfile.lambda
+++ b/Dockerfile.lambda
@@ -1,5 +1,19 @@
 FROM public.ecr.aws/lambda/python:3.12
 
-COPY lambda.py ${LAMBDA_TASK_ROOT}
+WORKDIR ${LAMBDA_TASK_ROOT}
 
-CMD [ "lambda.handler" ]
+RUN pip install poetry==2.1.1
+RUN poetry self add poetry-plugin-export
+
+RUN mkdir ${LAMBDA_TASK_ROOT}/src
+RUN mkdir ${LAMBDA_TASK_ROOT}/src/model
+
+COPY /poetry.lock ${LAMBDA_TASK_ROOT}
+COPY /pyproject.toml ${LAMBDA_TASK_ROOT}
+COPY /src/lambda.py ${LAMBDA_TASK_ROOT}/src/
+COPY /src/model/sunburst_ml.keras /var/sunburst_ml.keras
+
+RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
+RUN pip install -r requirements.txt
+
+CMD [ "src/lambda.handler" ]
