--- a/Dockerfile.lambda
+++ b/Dockerfile.lambda
@@ -11,7 +11,7 @@ RUN mkdir ${LAMBDA_TASK_ROOT}/src/model
 COPY /poetry.lock ${LAMBDA_TASK_ROOT}
 COPY /pyproject.toml ${LAMBDA_TASK_ROOT}
 COPY /src/lambda.py ${LAMBDA_TASK_ROOT}/src/
-COPY /src/model/sunburst_ml.keras /var/sunburst_ml.keras
+COPY /src/model/sunburst_ml.pkl ${LAMBDA_TASK_ROOT}/src/model/sunburst_ml.pkl
 
 RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
 RUN pip install -r requirements.txt
