--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,13 @@ requires-python = ">=3.12"
 dependencies = [
     "scikit-learn (>=1.6.1,<2.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
+    "fastapi[standard] (>=0.115.8,<0.116.0)",
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+start-server = "src.server:start"
