--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "scikit-learn (>=1.6.1,<2.0.0)",
     "pandas (>=2.2.3,<3.0.0)",
     "fastapi[standard] (>=0.115.8,<0.116.0)",
+    "hyperopt (>=0.2.7,<0.3.0)",
 ]
 
 
