--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "fastapi[standard] (>=0.115.8,<0.116.0)",
     "hyperopt (>=0.2.7,<0.3.0)",
+    "tensorflow (>=2.18.0,<3.0.0)",
+    "xgboost (>=2.1.4,<3.0.0)",
+    "matplotlib (>=3.10.0,<4.0.0)",
 ]
 
 
