--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "tensorflow (>=2.18.0,<3.0.0)",
     "xgboost (>=2.1.4,<3.0.0)",
     "matplotlib (>=3.10.0,<4.0.0)",
+    "aiohttp (>=3.11.13,<4.0.0)",
 ]
 
 
