--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -8,9 +8,9 @@ RUN mkdir ./src/model
 COPY pyproject.toml poetry.lock ./
 COPY src/server.py ./src/
 COPY src/nyiso.py ./src/
-COPY src/model/sunburst_ml.json ./src/model/
-COPY src/model/target_scaler.pkl ./src/model/
-COPY src/model/train_scaler.pkl ./src/model/
+COPY src/model/lstm_price_predictor.keras ./src/model/
+COPY src/model/target_scaler_lstm.pkl ./src/model/
+COPY src/model/train_scaler_lstm.pkl ./src/model/
 
 RUN pip install poetry && poetry install --no-root
 
