--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ dependencies = [
     "xgboost (>=2.1.4,<3.0.0)",
     "matplotlib (>=3.10.0,<4.0.0)",
     "aiohttp (>=3.11.13,<4.0.0)",
+    "openai (>=1.65.2,<2.0.0)",
+    "faiss-cpu (>=1.10.0,<2.0.0)",
+    "tiktoken (>=0.9.0,<0.10.0)",
 ]
 
 
