--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,17 +1,7 @@
 FROM python:3.12
 
-RUN pip install poetry==2.1.1
-RUN poetry self add poetry-plugin-export
-
 RUN mkdir src
-RUN mkdir src/model
 
-COPY /poetry.lock .
-COPY /pyproject.toml .
-COPY /src/test_model.py ./src/
-COPY /src/model/sunburst_ml.pkl ./src/model/sunburst_ml.pkl
+COPY /src/test.py src/
 
-RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
-RUN pip install -r requirements.txt
-
-CMD [ "python", "src/test_model.py" ]
+CMD [ "python", "src/test.py" ]
